--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-env_default = ESP8266PortalMqtt
-src_dir = ESP8266PortalMqtt
+env_default = ESP_boilerplate
+src_dir = ESP_boilerplate
 
 [common]
 build_flags =
@@ -9,18 +9,35 @@ build_flags =
   '-D ARDUINO_OTA'
   '-D WIFI_MANAGER_MAX_PARAMS=5'
 lib_deps =
-  Wire
   ArduinoJson
-  https://github.com/tzapu/WiFiManager.git#4873c7c6326fcbfb069731035b1ed79ebd11746a
+  https://github.com/tzapu/WiFiManager.git#c3ff582374e677f76d14de013966df0888b5b38e
   AsyncMqttClient
+  JC_Button
 
-[env:ESP8266PortalMqtt]
+[env:ESP_boilerplate]
 platform = espressif8266
-board = d1_mini
+board = esp12e
 framework = arduino
 build_flags =
   ${common.build_flags}
 
 lib_deps =
   ${common.lib_deps}
+
+[env:ESP_boilerplate_clock]
+platform = espressif8266
+board = esp12e
+framework = arduino
+build_flags =
+  ${common.build_flags}
+  '-D NTP_SUPPORT'
+  '-D HAS_RTC'
+
+lib_deps =
+  ${common.lib_deps}
+  Wire
+  NtpClientLib
+  DS3232RTC
+  Timezone
+  Time
 
