no wifi manager

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-env_default = ESP_boilerplate
+env_default = ESP8266_boilerplate
 src_dir = ESP_boilerplate
 
 [common]
@@ -7,14 +7,12 @@ build_flags =
   '-D DEBUG'
   '-D HTTP_OTA'
   '-D ARDUINO_OTA'
-  '-D WIFI_MANAGER_MAX_PARAMS=5'
 lib_deps =
-  ArduinoJson
-  https://github.com/tzapu/WiFiManager.git#c3ff582374e677f76d14de013966df0888b5b38e
-  AsyncMqttClient
-  JC_Button
+  bblanchon/ArduinoJson@^6.21.1
+  https://github.com/marvinroger/async-mqtt-client#develop
+  jchristensen/JC_Button@^2.1.2
 
-[env:ESP_boilerplate]
+[env:ESP8266_boilerplate]
 platform = espressif8266
 board = esp12e
 framework = arduino
@@ -23,21 +21,3 @@ build_flags =
 
 lib_deps =
   ${common.lib_deps}
-
-[env:ESP_boilerplate_clock]
-platform = espressif8266
-board = esp12e
-framework = arduino
-build_flags =
-  ${common.build_flags}
-  '-D NTP_SUPPORT'
-  '-D HAS_RTC'
-
-lib_deps =
-  ${common.lib_deps}
-  Wire
-  NtpClientLib
-  DS3232RTC
-  Timezone
-  Time
-
