--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,27 @@
 [platformio]
-env_default = ESP8266_boilerplate
+default_envs = ESP8266_boilerplate
 src_dir = ESP_boilerplate
 
 [common]
 build_flags =
-  '-D DEBUG'
-  '-D HTTP_OTA'
-  '-D ARDUINO_OTA'
+  '-D USE_LED_BUILTIN=true'
+  '-D USE_LITTLEFS=true'
+  '-D DRD_TIMEOUT=10'
+  '-D DRD_ADDRESS=0'
+  '-D RESET_IF_CONFIG_TIMEOUT=true'
+  '-D CONFIG_TIMEOUT=120000L'
+  '-D REQUIRE_ONE_SET_SSID_PW=true'
+  '-D RESET_IF_NO_WIFI=false'
+  '-D USE_DYNAMIC_PARAMETERS=true'
+  '-D SCAN_WIFI_NETWORKS=true'
+  '-D MANUAL_SSID_INPUT_ALLOWED=true'
+  '-D USING_BOARD_NAME=true'
+  '-D _ESP_WM_LITE_LOGLEVEL_=2'
 lib_deps =
   bblanchon/ArduinoJson@^6.21.1
   https://github.com/marvinroger/async-mqtt-client#develop
   jchristensen/JC_Button@^2.1.2
+  khoih-prog/ESPAsync_WiFiManager_Lite@^1.10.5
 
 [env:ESP8266_boilerplate]
 platform = espressif8266
@@ -18,6 +29,9 @@ board = esp12e
 framework = arduino
 build_flags =
   ${common.build_flags}
+  '-D DEBUG_ENABLED'
+  '-D HTTP_OTA'
+  '-D ARDUINO_OTA'
 
 lib_deps =
   ${common.lib_deps}
