--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,5 @@
 [platformio]
-default_envs = ESP8266_boilerplate
-src_dir = ESP_boilerplate
+default_envs = ESP8266
 
 [common]
 build_flags =
@@ -23,9 +22,22 @@ lib_deps =
   jchristensen/JC_Button@^2.1.2
   khoih-prog/ESPAsync_WiFiManager_Lite@^1.10.5
 
-[env:ESP8266_boilerplate]
+[env:ESP8266]
 platform = espressif8266
 board = esp12e
+framework = arduino
+build_flags =
+  ${common.build_flags}
+  '-D DEBUG_ENABLED'
+  '-D HTTP_OTA'
+  '-D ARDUINO_OTA'
+
+lib_deps =
+  ${common.lib_deps}
+
+[env:ESP32]
+platform = espressif32
+board = esp32dev
 framework = arduino
 build_flags =
   ${common.build_flags}
