--- a/platformio.ini
+++ b/platformio.ini
@@ -47,3 +47,16 @@ build_flags =
 
 lib_deps =
   ${common.lib_deps}
+
+[env:ESP32-C3]
+platform = espressif32
+board = esp32-c3-devkitm-1
+framework = arduino
+build_flags =
+  ${common.build_flags}
+  '-D DEBUG_ENABLED'
+  '-D HTTP_OTA'
+  '-D ARDUINO_OTA'
+
+lib_deps =
+  ${common.lib_deps}
