New async wifi manager
drops support for NTP & RTC

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,43 +1,62 @@
 [platformio]
-env_default = ESP_boilerplate
-src_dir = ESP_boilerplate
+default_envs = ESP8266
 
 [common]
 build_flags =
-  '-D DEBUG'
+  '-D USE_LED_BUILTIN=true'
+  '-D USE_LITTLEFS=true'
+  '-D DRD_TIMEOUT=10'
+  '-D DRD_ADDRESS=0'
+  '-D RESET_IF_CONFIG_TIMEOUT=true'
+  '-D CONFIG_TIMEOUT=120000L'
+  '-D REQUIRE_ONE_SET_SSID_PW=true'
+  '-D RESET_IF_NO_WIFI=false'
+  '-D USE_DYNAMIC_PARAMETERS=true'
+  '-D SCAN_WIFI_NETWORKS=true'
+  '-D MANUAL_SSID_INPUT_ALLOWED=true'
+  '-D USING_BOARD_NAME=true'
+  '-D _ESP_WM_LITE_LOGLEVEL_=2'
+lib_deps =
+  bblanchon/ArduinoJson@^6.21.1
+  https://github.com/marvinroger/async-mqtt-client#develop
+  jchristensen/JC_Button@^2.1.2
+  khoih-prog/ESPAsync_WiFiManager_Lite@^1.10.5
+
+[env:ESP8266]
+platform = espressif8266
+board = esp12e
+framework = arduino
+build_flags =
+  ${common.build_flags}
+  '-D DEBUG_ENABLED'
   '-D HTTP_OTA'
   '-D ARDUINO_OTA'
-  '-D WIFI_MANAGER_MAX_PARAMS=5'
-lib_deps =
-  ArduinoJson
-  https://github.com/tzapu/WiFiManager.git#c3ff582374e677f76d14de013966df0888b5b38e
-  AsyncMqttClient
-  JC_Button
-
-[env:ESP_boilerplate]
-platform = espressif8266
-board = esp12e
-framework = arduino
-build_flags =
-  ${common.build_flags}
 
 lib_deps =
   ${common.lib_deps}
 
-[env:ESP_boilerplate_clock]
-platform = espressif8266
-board = esp12e
+[env:ESP32]
+platform = espressif32
+board = esp32dev
 framework = arduino
 build_flags =
   ${common.build_flags}
-  '-D NTP_SUPPORT'
-  '-D HAS_RTC'
+  '-D DEBUG_ENABLED'
+  '-D HTTP_OTA'
+  '-D ARDUINO_OTA'
 
 lib_deps =
   ${common.lib_deps}
-  Wire
-  NtpClientLib
-  DS3232RTC
-  Timezone
-  Time
 
+[env:ESP32-C3]
+platform = espressif32
+board = esp32-c3-devkitm-1
+framework = arduino
+build_flags =
+  ${common.build_flags}
+  '-D DEBUG_ENABLED'
+  '-D HTTP_OTA'
+  '-D ARDUINO_OTA'
+
+lib_deps =
+  ${common.lib_deps}
